[package]
name = "codectrl-protobuf-bindings"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(target_arch = "wasm32")'.dependencies]
web = { path = "./web" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native = { path = "./native" }
