[package]
name = "codectrl-protobuf-bindings"
version = "0.8.3"
edition = "2021"
authors = ["Samuel Boyden <s.boyden@authentura.com>"]
license = "MIT"
description = "Generate Rust protobuf bindings for use with CodeCTRL and the Rust logger"
repository = "https://github.com/Authentura/codectrl-rust-protobuf-bindings"
homepage = "https://codectrl.authentura.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(target_arch = "wasm32")'.dependencies]
web = { path = "./web", package = "codectrl-bindings-web", version = "0.0.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native = { path = "./native", package = "codectrl-bindings-native", version = "0.0.0" }
