[package]
name = "native"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.7"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[build-dependencies]
tonic-build = "0.7"
prost-build = "0.10"
