[package]
name = "web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.7", default-features = false, features = ["codegen", "prost"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics", "js"]}

[build-dependencies]
tonic-build = { version = "0.7", default-features = false, features = ["prost"] }
prost-build = "0.10"
