[package]
name = "codectrl-bindings-web"
version = "0.0.0"
edition = "2021"
authors = ["Samuel Boyden <s.boyden@authentura.com>"]
license = "MIT"
description = "Generate Rust protobuf bindings for use with CodeCTRL and the Rust logger"
repository = "https://github.com/Authentura/codectrl-rust-protobuf-bindings"
homepage = "https://codectrl.authentura.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.7", default-features = false, features = ["codegen", "prost"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics", "js"]}

[build-dependencies]
tonic-build = { version = "0.7", default-features = false, features = ["prost"] }
prost-build = "0.10"
